Update package mime

--- a/src/server/package.json
+++ b/src/server/package.json
@@ -22,6 +22,7 @@
     "generic-pool": "~2.0.4",
     "hawk": "^7.0.7",
     "hoek": "^5.0.4",
+    "mime": "^2.3.1",
     "mongodb": "~2.2.19",
     "mu2": "~0.5.20",
     "multer": "^0.1.8",
