--- a/src/server/package.json
+++ b/src/server/package.json
@@ -4,16 +4,17 @@
   "description": "Deforestation Polygon Assessment Tool",
   "main": "app.js",
   "dependencies": {
+    "always": "^2.2.0",
     "app-root-path": "^1.0.0",
     "archiver": "^3.0.0",
     "async": "~0.2.10",
     "body-parser": "^1.12.4",
     "compression": "^1.4.3",
     "connect-mongo": "^0.8.2",
-    "connect-timeout": "~1.4.0",
+    "connect-timeout": "^1.9.0",
     "cookie-parser": "~1.4.3",
     "ejs": "*",
-    "express": "~4.12.4",
+    "express": "^4.16.4",
     "express-load": "^1.1.14",
     "express-session": "^1.13.0",
     "express-socket.io-session": "^1.3.2",
@@ -31,11 +32,11 @@
     "node-mime": "^1.0.0",
     "node-schedule": "~1.2.0",
     "pg": "^7.4.3",
-    "request": "~2.58.0",
+    "request": "^2.88.0",
     "request-param": "^0.2.0",
     "response-time": "^2.3.0",
     "session-memory-store": "~0.2.2",
-    "sqlite3": "^3.1.13",
+    "sqlite3": "^4.0.6",
     "underscore": "~1.6.0",
     "xml2js": "~0.4.1"
   },
