Atualizando nome da aplicação

--- a/src/server/package.json
+++ b/src/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dpat",
+  "name": "atlas",
   "version": "0.1.0",
   "description": "Deforestation Polygon Assessment Tool",
   "main": "app.js",
