--- a/src/server/package.json
+++ b/src/server/package.json
@@ -7,7 +7,7 @@
     "always": "^2.2.0",
     "app-root-path": "^1.0.0",
     "archiver": "^3.0.0",
-    "async": "~0.2.10",
+    "async": "^0.2.10",
     "body-parser": "^1.12.4",
     "compression": "^1.4.3",
     "connect-mongo": "^0.8.2",
@@ -39,6 +39,7 @@
     "response-time": "^2.3.0",
     "session-memory-store": "~0.2.2",
     "sqlite3": "^5.0.2",
+    "tiles-in-bbox": "^1.0.2",
     "underscore": "~1.12.1",
     "xml2js": "~0.4.1"
   },
